--- a/index.htm
+++ b/index.htm
@@ -56,10 +56,25 @@
 						</tr>
 						<tr >
 							<td valign="top" colspan="2" style="padding-top: 30pt;">
-								<span style="padding-left: 20pt;line-height: 22pt;">I am an assitant professor in School of Computer Software, Tianjin University. I received my PhD degree from Tianjin University in 2014 under guidance of Prof. <a href="http://scs.tju.edu.cn/~jwzhang/">Jiawan Zhang</a>, and working closely with Prof. <a href="http://www.tjucs.win/szdw/jsfjs/fengwei/index.htm">Wei Feng</a>. My research lies in the areas of computer vision and machine learning, especially in the problems of object localization and degraded image restoration. <br/><br/>
+								<span style="padding-left: 20pt;line-height: 22pt;">I am an assitant professor in School of Computer Software, Tianjin University. I received my PhD degree from Tianjin University in 2014 under supervision of Prof. <a href="http://scs.tju.edu.cn/~jwzhang/">Jiawan Zhang</a>, and working closely with Prof. <a href="http://cs.tju.edu.cn/faculty/fengwei/index.html">Wei Feng</a> and Prof. <a href="https://sites.google.com/view/xjguo">Xiaojie Guo</a>. My research lies in the areas of computer vision and machine learning, especially in the problems of object localization and degraded image restoration. View me on <a href="https://scholar.google.nl/citations?user=h9HLv2EAAAAJ&hl=en">Google Scholar</a>.<br/><br/>
 								</span>
 							</td>
-
+						</tr>
+						<tr>
+							<td valign="top" colspan="2" style="padding-top: 20pt;">
+								<span style="font-weight: bold;">Academic Activities</span><br/>
+								<span style="padding-left: 20pt;line-height: 22pt;">Reviewer of IEEE Access, International Conference on Pattern Recognition.<br/>
+								</span>
+							</td>
+						</tr>
+						<tr>
+							<td valign="top" colspan="2" style="padding-top: 20pt;">
+								<span style="font-weight: bold;">Collabrators</span><br/>
+								<span style="padding-left: 20pt;line-height: 22pt;">Professor <a href="http://scs.tju.edu.cn/~jwzhang/">Jiawan Zhang</a></span><br/>
+								<span style="padding-left: 20pt;line-height: 22pt;">Professor <a href="http://cs.tju.edu.cn/faculty/fengwei/index.html">Wei Feng</a></span><br/>
+								<span style="padding-left: 20pt;line-height: 22pt;">Professor <a href="https://sites.google.com/view/xjguo">Xiaojie Guo</a></span><br/>
+								
+							</td>
 						</tr>
 						</table>
 					</div>
