--- a/index.htm
+++ b/index.htm
@@ -76,6 +76,13 @@
 								
 							</td>
 						</tr>
+						<tr>
+							<td valign="top" colspan="2" style="padding-top: 20pt;">
+								<span style="font-weight: bold;">Projects</span><br/>
+								<span style="padding-left: 20pt;line-height: 22pt;">2017.01-2019.12  "Superpixel grid based generic object localization", NSF of China, PI (¥210,000)</span><br/>
+								<span style="padding-left: 20pt;line-height: 22pt;">2017.11-2019.11  "Object localization algorithm for images taken in bad weather conditions", Hubei Key Laboratory of Intelligent Vision Based Monitoring for Hydroelectric Engineering, PI (¥50,000)</span><br/>
+							</td>
+						</tr>
 						</table>
 					</div>
 				</div>
