add project page for STD

--- a/index.htm
+++ b/index.htm
@@ -93,7 +93,7 @@
 				<div class="inner-boundary">
 				  <div class="inner-border">
 				  	<p>
-				  		<span class="author-name"> <b>Liang Li</b>, <a href="https://sites.google.com/view/xjguo">Xiaojie Guo</a>*, <a href="http://cs.tju.edu.cn/faculty/fengwei/index.html">Wei Feng</a>, <a href="http://scs.tju.edu.cn/~jwzhang/">Jiawan Zhang</a></span>. 
+				  		<span class="author-name">Liang Li, <a href="https://sites.google.com/view/xjguo">Xiaojie Guo</a>*, <a href="http://cs.tju.edu.cn/faculty/fengwei/index.html">Wei Feng</a>, <a href="http://scs.tju.edu.cn/~jwzhang/">Jiawan Zhang</a></span>. 
 						<span class="p-title">Soft Clustering Guided Image Smoothing</span>. 
 						<span class="p-journal">IEEE International Conference on Multimedia & Expo(ICME)</span>.
 						<span class="p-year">Accept as Oral, 2018.</span>
@@ -105,7 +105,7 @@
 						<span class="p-title">Structure-Texture Decomposition Via Joint Structure Discovery and Texture Smoothing</span>. 
 						<span class="p-journal">IEEE International Conference on Multimedia & Expo(ICME)</span>.
 						<span class="p-year">Accept, 2018.</span>
-						<span class="p-file">[<a href="files/std2018.pdf">pdf</a>]</span><br>
+						<span class="p-file">[<a href="files/std2018.pdf">pdf</a>, <a target="_blank" href="https://sites.google.com/view/xjguo/sdts">project</a>]</span><br>
 				  	</p>
 				  	<p>
 						<span class="author-name"> Yonghua Zhang, Liang Li, Runmin Cong, <a href="https://sites.google.com/view/xjguo">Xiaojie Guo</a>, Hui Xu, <a href="http://scs.tju.edu.cn/~jwzhang/">Jiawan Zhang</a>*</span>. 
