add a MTA paper and the files

--- a/index.htm
+++ b/index.htm
@@ -93,6 +93,13 @@
 				<div class="inner-boundary">
 				  <div class="inner-border">
 				  	<p>
+				  		<span class="author-name">Jiachuan Sheng, Yaqi Chen, Yuzhi Li, Liang Li*. 
+						<span class="p-title">Embedded learning for computerized production of movie trailers</span>. 
+						<span class="p-journal">Multimed Tools Appl,</span>.
+						<span class="p-year">2018.</span>
+						<span class="p-file">[<a href="files/movie-trailer.pdf">pdf</a>]</span><br>
+				  	</p>
+				  	<p>
 				  		<span class="author-name">Liang Li, <a href="https://sites.google.com/view/xjguo">Xiaojie Guo</a>*, <a href="http://cs.tju.edu.cn/faculty/fengwei/index.html">Wei Feng</a>, <a href="http://scs.tju.edu.cn/~jwzhang/">Jiawan Zhang</a></span>. 
 						<span class="p-title">Soft Clustering Guided Image Smoothing</span>. 
 						<span class="p-journal">IEEE International Conference on Multimedia & Expo(ICME)</span>.
