--- a/index.htm
+++ b/index.htm
@@ -147,14 +147,14 @@
 						<span class="p-title">Video dehazing with spatial and temporal coherence</span>. 
 						<span class="p-journal">The Visual Computer, 27(6-8):749-757</span>.
 						<span class="p-year">2011.</span>
-						<span class="p-file">[<a href="files/vrcai11.pdf">pdf</a>]</span><br>
+						<span class="p-file">[<a href="ffiles/video-dehazing.pd">pdf</a>]</span><br>
 					</p>
 					<p>
 						<span class="author-name">Liang Li, <a href="http://cs.tju.edu.cn/faculty/fengwei/index.html">Wei Feng</a>, <a href="http://scs.tju.edu.cn/~jwzhang/">Jiawan Zhang</a>*, Jianmin Jiang</span>. 
 						<span class="p-title">Video motion estimation with temporal coherence</span>. 
 						<span class="p-journal">International Conference on Virtual Reality Continuum and Its Application in Industry (VRCAI)</span>.
 						<span class="p-year">2011.</span>
-						<span class="p-file">[<a href="files/video-dehazing.pdf">pdf</a>]</span><br>
+						<span class="p-file">[<a href="files/vrcai11.pdf">pdf</a>]</span><br>
 					</p>
 					<p>
 						<span class="author-name"><a href="http://scs.tju.edu.cn/~jwzhang/">Jiawan Zhang</a>, Liang Li, Yi Zhang, Guoqiang Yang</span>. 
