--- a/index.htm
+++ b/index.htm
@@ -92,8 +92,22 @@
 			<div id="home-panel" class="guest shadowed item">
 				<div class="inner-boundary">
 				  <div class="inner-border">
+					<p>
+					  <span class="author-name">Kai Wang, Liang Li*, Jiawan Zhang</span>.
+					  <span class="p-title">End-to-end trainable network for superpixel and image segmentation</span>. 
+					  <span class="p-journal">Pattern Recognition Letters</span>.
+					  <span class="p-year">vol. 40, pp. 135-142, 2020.</span>
+					  <span class="p-file">[<a href="files/sup-img-seg.pdf">pdf</a>]</span><br>
+					</p>
+					<p>
+						<span class="author-name">Mubinun Awaisu, Liang Li* Junjie Peng, Jiawan Zhang. </span>
+					  <span class="p-title">Fast Superpixel Segmentation with Deep Features</span>. 
+					  <span class="p-journal">Computer Graphics International Conference (CGI)</span>.
+					  <span class="p-year">2019.</span>
+					  <span class="p-file">[<a href="files/Awaisu2019_Chapter_FastSuperpixelSegmentationWith.pdf">pdf</a>]</span><br>
+					</p>
 				  	<p>
-				  		<span class="author-name">Jiachuan Sheng, Yaqi Chen, Yuzhi Li, Liang Li*. 
+				  		<span class="author-name">Jiachuan Sheng, Yaqi Chen, Yuzhi Li, Liang Li*. </span>
 						<span class="p-title">Embedded learning for computerized production of movie trailers</span>. 
 						<span class="p-journal">Multimed Tools Appl,</span>.
 						<span class="p-year">2018.</span>
@@ -111,7 +125,7 @@
 				  		<span class="author-name"> <a href="https://sites.google.com/view/xjguo">Xiaojie Guo</a>, Liang Li*, <a href="http://scs.tju.edu.cn/~jwzhang/">Jiawan Zhang</a></span>. 
 						<span class="p-title">Structure-Texture Decomposition Via Joint Structure Discovery and Texture Smoothing</span>. 
 						<span class="p-journal">IEEE International Conference on Multimedia & Expo(ICME)</span>.
-						<span class="p-year">Accept, 2018.</span>
+						<span class="p-year">2018.</span>
 						<span class="p-file">[<a href="files/std2018.pdf">pdf</a>, <a target="_blank" href="https://sites.google.com/view/xjguo/sdts">project</a>]</span><br>
 				  	</p>
 				  	<p>
