change photo,add paper and projects

--- a/index.htm
+++ b/index.htm
@@ -30,8 +30,8 @@
 						<table border="0">
 						<tr>
 							<td width="30%">
-								<div style="float:left; border:1px solid black;">
-								<img class="profile" src="img/liliang.png">
+								<div style="/*float:left; border:1px solid black;*/">
+								<img class="profile" src="img/portrait-lr.jpg"/>
 								</div>
 							</td>
 							<td valign="top">
@@ -63,7 +63,7 @@
 						<tr>
 							<td valign="top" colspan="2" style="padding-top: 20pt;">
 								<span style="font-weight: bold;">Academic Activities</span><br/>
-								<span style="padding-left: 20pt;line-height: 22pt;">Reviewer of IEEE Access, International Conference on Pattern Recognition.<br/>
+								<span style="padding-left: 20pt;line-height: 22pt;">Reviewer of IEEE Access, International Conference on Pattern Recognition， Computer Science, NSF of China<br/>
 								</span>
 							</td>
 						</tr>
@@ -79,6 +79,7 @@
 						<tr>
 							<td valign="top" colspan="2" style="padding-top: 20pt;">
 								<span style="font-weight: bold;">Projects</span><br/>
+								<span style="padding-left: 20pt;line-height: 22pt;">2020.10-2023.10  "Enhancement of the content and quality of digital cultural heritage", National Key Research and Development Project， MOST of China, PI (¥180,000)</span><br/>
 								<span style="padding-left: 20pt;line-height: 22pt;">2017.01-2019.12  "Superpixel grid based generic object localization", NSF of China, PI (¥210,000)</span><br/>
 								<span style="padding-left: 20pt;line-height: 22pt;">2017.11-2019.11  "Object localization algorithm for images taken in bad weather conditions", Hubei Key Laboratory of Intelligent Vision Based Monitoring for Hydroelectric Engineering, PI (¥50,000)</span><br/>
 							</td>
@@ -92,6 +93,12 @@
 			<div id="home-panel" class="guest shadowed item">
 				<div class="inner-boundary">
 				  <div class="inner-border">
+					<p>
+						<span class="author-name">Hailing Wang, Qiaoyu Tian, Liang Li and Xiaojie Guo</span>.
+						<span class="p-title">Image Demoireing with A Dual-domian Distilling Network</span>. 
+						<span class="p-journal">ICME 2021</span>.
+						<span class="p-year">Oral, 2021.</span>
+					  </p>
 					<p>
 					  <span class="author-name">Kai Wang, Liang Li*, Jiawan Zhang</span>.
 					  <span class="p-title">End-to-end trainable network for superpixel and image segmentation</span>. 
